2008-06-02  Matthias Clasen <mclasen@redhat.com> 

	Merge from trunk:

	* gtk/gtkfilechooserdefault.c:
	(shortcuts_activate_volume_mount_cb): Ignore G_IO_ERROR_FAILED_HANDLED
	errors (#532262).

2008-06-02  Matthias Clasen <mclasen@redhat.com>

	Merge from trunk:

	* gtk/gtkfilechooserdefault.c: (location_toggle_popup_handler): Don't
	try to toggle the visibility of the location entry field in search and 
	recent mode (#526422).

2008-06-02  Matthias Clasen <mclasen@redhat.com>

	Merge from trunk:

	Bug 387972 – gtkassistant drawing problem

	* gtk/gtkassistant.c (gtk_assistant_size_allocate): Make
	GtkAssistant work better in glade.

2008-06-02  Matthias Clasen <mclasen@redhat.com>

	Merge from trunk:

	Bug 529841 – incorrect position in directfb

	* gdk/directfb/gdkwindow-directfb.c: fix y = abs_x

2008-06-02  Matthias Clasen <mclasen@redhat.com>

	Merge from trunk:

	* gtk/gtktooltips.c (gtk_tooltips_destroy): no need to 
	g_return_if_fail (tooltips != NULL)

2008-03-20  Tor Lillqvist  <tml@novell.com>

	Merge from trunk:

	Bug 314084 - GTK+ dialogs should not be placed partially offscreen

	* gtk/gtkwindow.c (clamp): New function. Clamps a window position
	in one dimension, or centered in case it doesn't fit.
	(clamp_window_to_rectangle): Simplify. Call clamp() for x and y
	dimensions.

2008-05-25  Johan Dahlin  <johan@gnome.org>

	Merge from trunk:

	Bug 534694 – Col id in GtkListStore could be out of range

	* gtk/gtkliststore.c (list_store_start_element): Fix up error handling
	a bit. Pointed out by Jan Arne Petersen.

2008-05-30  Tor Lillqvist  <tml@novell.com>

	Bug 533108 - leak of GDI region in function 'handle_wm_paint'

	* gdk/win32/gdkevents-win32.c (handle_wm_paint): Patch by Daniel
	Atallah.

2008-05-28  Kristian Rietveld  <kris@imendio.com>

	Merge from trunk:

	Bug 449625 - crash in gtk_tree_view_real_move_cursor at
	gtktreeview.c:9641

	* gtk/gtktreeview.c (gtk_tree_view_move_cursor_page_up_down):